Correct unnecessary spacing

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,10 @@ html {
   display: block;
 }
 
+.nav-links {
+  background-color: #1d4f44;
+}
+
 header {
   background-color: #75aa9c;
 }
@@ -35,7 +39,7 @@ ul {
 }
 
 footer {
-  background-color: #75aa9c;
+  background-color: #1d4f44;
 }
 
 .sans {
@@ -43,8 +47,8 @@ footer {
 }
 
 nav li:hover {
-  background-color: #1d4f44;
-  color: #fff;
+  background-color: #000;
+  color: #1d4f44;
 }
 
 .skip-links {
@@ -55,14 +59,14 @@ nav li:hover {
 
 .skip-links a {
   position: absolute;
-  top: -3px;
+  top: -50px;
   background-color: #000;
   color: #fff;
   padding: .05em .75em;
 }
 
 nav a:hover {
-  background-color: #1d4f44;
+  background-color: #000;
   color: #fff;
 }
 
@@ -71,8 +75,8 @@ nav a:hover {
 }
 
 .current {
-  background-color: #ecc7b5;
-  color: black;
+  background-color: #000;
+  color: #fff;
 }
 
 .btn {
@@ -107,4 +111,12 @@ h4 {
 .colorsans {
   font-family: "Merriweather Sans", sans-serif;
   color: #1d4f44;
+}
+
+.white {
+  color: #000;
+}
+
+.btn-ghost {
+  color: #000;
 }
